# ismrmrd

./: CMakeLists.txt
cmake/: FindNFFT.cmake
examples/protocol/: CMakeLists.txt  client.cpp  icp.h  icpCallback.h  icpClient.cpp  icpClient.h  icpClientCallbacks.cpp  icpClientCallbacks.h  icpClientStarter.cpp  icpClientTest.cpp  icpClientTest.h  icpClientTestData.cpp  icpClientTestData.h  icpConnection.cpp  icpConnection.h  icpInputManager.cpp  icpInputManager.h  icpMTQueue.h  icpOutputManager.cpp  icpOutputManager.h  icpProcessor.cpp  icpProcessor.h  icpReceivedData.cpp  icpReceivedData.h  icpServer.cpp  icpServer.h  icpServerCallbacks.cpp  icpServerCallbacks.h  icpServerStarter.cpp  icpServerTest.cpp  icpServerTest.h  icpServerTestData.cpp  icpServerTestData.h  icpSession.cpp  icpSession.h  icpUserAppBase.h  imageReconBase.cpp  imageReconBase.h  imageReconOne.cpp  imageReconOne.h  (+1 more)
examples/python/: ismrmrd_recon_radial_dataset.py
include/ismrmrd/: dataset_dtypes.h  ismrmrd.h  xml.h
libsrc/: dataset.cpp  ismrmrd.cpp  xml.cpp
utilities/: CMakeLists.txt  generate_cartesian_shepp_logan.cpp  generate_radial_shepp_logan.cpp  ismrmrd_nfft.cpp  ismrmrd_nfft.h  recon_cartesian_2d.cpp
